add api for brick

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,10 @@ Saved/
 # Fichiers système
 .DS_Store
 Thumbs.db
+.env
+
+# Fichiers et dossiers générés par Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
