--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "type": "module",
   "dependencies": {
+    "axios": "^1.7.8",
+    "cheerio": "^1.0.0",
     "dotenv": "^16.4.5",
-    "node-fetch": "^3.3.2"
+    "jsdom": "^25.0.1",
+    "node-fetch": "^3.3.2",
+    "three": "^0.170.0",
+    "three-stdlib": "^2.34.0"
   },
   "scripts": {
     "start": "node Utils/main.js",
