--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "getSetParts": "node Utils/main.js getSetParts",
     "searchParts": "node Utils/main.js searchParts",
     "searchSets": "node Utils/main.js searchSets",
+    "DetailsBrick": "node --max-old-space-size=8192 ./Utils/api/getPartDetailsBrickLinks.js",
     "help": "node Utils/main.js help"
   }
 }
