--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "scripts": {
     "start": "node Utils/main.js",
+    "downloadPart": "node ./Utils/api/dowloadFile3D.js",
     "getPartDetails": "node Utils/main.js getPartDetails",
     "getPartColors": "node Utils/main.js getPartColors",
     "getPartSets": "node Utils/main.js getPartSets",
